--- a/package.json
+++ b/package.json
@@ -34,6 +34,8 @@
     "cmdk": "^1.1.1",
     "date-fns": "^4.1.0",
     "dayjs": "^1.11.18",
+    "embla-carousel-autoplay": "^8.6.0",
+    "embla-carousel-react": "^8.6.0",
     "framer-motion": "^12.23.22",
     "js-cookie": "^3.0.5",
     "jwt-decode": "^4.0.0",
