--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "framer-motion": "^12.23.22",
     "js-cookie": "^3.0.5",
     "jwt-decode": "^4.0.0",
+    "libphonenumber-js": "^1.12.23",
     "lucide-react": "^0.544.0",
     "next": "15.5.3",
     "next-themes": "^0.4.6",
