--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "recharts": "^2.15.4",
     "redux-persist": "^6.0.0",
     "sonner": "^2.0.7",
+    "swiper": "^12.0.2",
     "tailwind-merge": "^3.3.1",
     "zod": "^4.1.8"
   },
