--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "dev": "next dev --turbopack -p 4000",
     "build": "next build --turbopack",
     "start": "next start",
+    "type-check": "tsc --noEmit",
     "lint": "eslint"
   },
   "dependencies": {
