--- a/package.json
+++ b/package.json
@@ -78,7 +78,8 @@
     "@types/lodash.throttle": "^4.1.9",
     "@types/node": "24.5.0",
     "@types/react-dom": "^19",
-    "eslint-config-next": "15.5.3",
+    "eslint": "^9.39.3",
+    "eslint-config-next": "^15.5.3",
     "sass": "^1.93.2",
     "tailwindcss": "^4",
     "tw-animate-css": "^1.3.8"
